fix toc tab spacing

--- a/frontend/css/toc.css
+++ b/frontend/css/toc.css
@@ -22,7 +22,7 @@
 	transform: rotate(90deg);
 	display: block;
 	position: absolute;
-	left: 138px;
+	left: 137px;
 	top: 100px;
 	color: #222;
 	z-index: 101;
